--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mojitos EUZ</title>
+  <title>Cubanita Chiquita</title>
 
   <!-- Link de Awesome CND -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -20,7 +20,7 @@
 <!-- Encabezado para la selección de opciones -->
 <header>
 
-  <a href="#" class="logo"><i class="fas fa-crown"> Los Pambazos de Mary</i></a>
+  <a href="#" class="logo"><i class="fas fa-crown"> La Cuba Chiquita</i></a>
   
   <!-- Definir la barra de Navegación -->
   <div id="menu-bar" class="fas fa-bars"></div>
@@ -40,8 +40,8 @@
 
   <div class="content">
     <h3>¡Los Mejores Pambazos y Mojitos del Barrio!</h3>
-    <p>El sabor de una buena comida, acompañada de una bebida relajante es lo que nos gusta compartir con nuestros vecinos de la UEZ. Por ello les ofrecemos una rica variedad de <span>pambazos</span> y <span>mojitos</span> para que disfrutes al máximo tu fin de semana.</p>
-    <a href="#" class="btn">¡Pidelos Ahora!</a>
+    <p>¿Fin de semana? Relájate! y no te preocupes por la comida y los tragos coquetos. En la Cuba Chiquita ofrecemos los <span>mejores pambazos y mojitos del rumbo</span>. Garantizado que la pasarás de lo mejor.</p>
+    <a href="https://wa.me/525616379523?text=Quisiera pedir algo rico para este fin :3" class="btn">¡Pídelos Ahora!</a>
   </div>
   <div class="image">
     <img src="images/home-img.png" alt="imagen de un mojito tradicional">
@@ -132,7 +132,7 @@
       <h3>¡Promoción SuperBowl!</h3>
       <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>SuperBowl</span>, que te ofrece 4 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$240 pesotes!</span>. Para que disfrutes el SuperBowl con una buena comida y ricas bebidas.</p>
       <p>Valida del 11 al 13 de febrero de 2022.</p>
-      <a href="#" class="btn">¡Ordena Ahora!</a>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo SuperBowl!!!" class="btn">¡Ordena Ahora!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-1.png" alt="imagen de dos pambazos preparados y 4 mojitos">
@@ -144,7 +144,7 @@
       <h3>¡Promoción de San Valentín!</h3>
       <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$150 pesotes!</span>. Para que compartas con con la persona que más amas o con tus amigos.</p>
       <p>Valida del 11 al 20 de febrero de 2022.</p>
-      <a href="#" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-2.png" alt="imagen de dos pambazos preparados y dos mojitos">
@@ -156,7 +156,7 @@
       <h3>¡Promoción de Mary!</h3>
       <p>Nos gusta poder llevarte los mejores sabores de Jalisco. Con la promo <span>Mary</span> te compartimos 3 pambazos tradicionales a tan solo <span>¡$50 pesotes!</span>. Queremos que nuestras raíces Jaliciences condimenten tu mesa.</p>
       <p>Valida todo el año.</p>
-      <a href="#" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo de Mary :3" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-3.png" alt="imagen de dos pambazos preparados">
@@ -168,7 +168,7 @@
       <h3>¡Promoción Mojitos del Barrio!</h3>
       <p>Sabemos que no hay nada como un delicioso mojito después de una semana de trabajo pesado, por eso tenemos para ti la promo <span>Mojitos del Barrio</span>, ofreciendote 2 mojitos del sabor que gustes por solamente <span>¡$100 pesotes!</span>. Nuestra intención es que pases un fin de semana relax.</p>
       <p>Valida todo el año.</p>
-      <a href="#" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo Mojitos del Barrio :P" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-4.png" alt="imagen de dos mojitos">
@@ -192,7 +192,7 @@
     <div class="btn-order">
       <p>Comunícate con nosotros para hacernos saber los ricos platillos y bebidas que quieras. Recuerda: tenemos un horario de atención de para la preparación de alimentos de <span>6 de la Tarde a 11 de la Noche, de Viernes a Sábado</span>. La preparación de bebidas es en un horario de <span>3 de la Tarde a 11 de la Noche, de Viernes a Domingo</span>.</p>
 
-      <a href="#" class="btn">Pedir mi Orden</a>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir algo rico para pasar chido el fin :D" class="btn">Pedir mi Orden</a>
     </div>
 
   </div>
