--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Encabezado para la selección de opciones -->
 <header>
 
-  <a href="#" class="logo"><i class="fas fa-crown"> L a  C u b a  C h i q u i t a</i></a>
+  <a href="#" class="logo"><i class="fas fa-crown"> La Cuba Chiquita</i></a>
   
   <!-- Definir la barra de Navegación -->
   <div id="menu-bar" class="fas fa-bars"></div>
@@ -129,21 +129,9 @@
   
   <div class="container">
     <div class="content">
-      <h3>¡Promoción SuperBowl!</h3>
-      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>SuperBowl</span>, que te ofrece 4 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$240 pesotes!</span>. Para que disfrutes el SuperBowl con una buena comida y ricas bebidas.</p>
-      <p>Valida del 11 al 13 de febrero de 2022.</p>
-      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo SuperBowl!!!" class="btn">¡Ordena Ahora!</a>
-    </div>
-    <div class="image">
-      <img src="images/prom-img-1.png" alt="imagen de dos pambazos preparados y 4 mojitos">
-    </div>
-  </div>
-  
-  <div class="container">
-    <div class="content">
       <h3>¡Promoción de San Valentín!</h3>
-      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$150 pesotes!</span>. Para que compartas con con la persona que más amas o con tus amigos.</p>
-      <p>Valida del 11 al 20 de febrero de 2022.</p>
+      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con con la persona que más amas o con tus amigos.</p>
+      <p>Valida Viernes y Sábado del 11 al 20 de febrero de 2022.</p>
       <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
@@ -153,9 +141,21 @@
 
   <div class="container">
     <div class="content">
+      <h3>¡Promoción Fiesta en Grande!</h3>
+      <p>Nos gusta que te diviertas con tus amigos, y justo por eso con la promo <span>Fiesta en Grande</span>, te ofrecemos 3 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$270 pesotes!</span>. Para que disfrutes el SuperBowl con una buena comida y ricas bebidas.</p>
+      <p>Valida todo el año Viernes y Sábado.</p>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo Fiesta en Grande!!!" class="btn">¡Ordena Ahora!</a>
+    </div>
+    <div class="image">
+      <img src="images/prom-img-1.png" alt="imagen de dos pambazos preparados y 4 mojitos">
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="content">
       <h3>¡Promoción de Mary!</h3>
-      <p>Nos gusta poder llevarte los mejores sabores de Jalisco. Con la promo <span>Mary</span> te compartimos 3 pambazos tradicionales a tan solo <span>¡$50 pesotes!</span>. Queremos que nuestras raíces Jaliciences condimenten tu mesa.</p>
-      <p>Valida todo el año.</p>
+      <p>Nos gusta poder llevarte los mejores sabores de Jalisco. Con la promo <span>Mary</span> te compartimos 3 pambazos tradicionales a tan solo <span>¡$80 pesotes!</span>. Queremos que los sabores de Jalisco estén tu mesa.</p>
+      <p>Valida todo el año Viernes y Sábado.</p>
       <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo de Mary :3" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
@@ -165,10 +165,10 @@
 
   <div class="container">
     <div class="content">
-      <h3>¡Promoción Mojitos del Barrio!</h3>
-      <p>Sabemos que no hay nada como un delicioso mojito después de una semana de trabajo pesado, por eso tenemos para ti la promo <span>Mojitos del Barrio</span>, ofreciendote 2 mojitos del sabor que gustes por solamente <span>¡$100 pesotes!</span>. Nuestra intención es que pases un fin de semana relax.</p>
-      <p>Valida todo el año.</p>
-      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo Mojitos del Barrio :P" class="btn">¡Pidelos Ahora!</a>
+      <h3>¡Promoción Habemus Mojitus!</h3>
+      <p>Sabemos que no hay nada como un delicioso mojito después de una semana de trabajo pesado, por eso tenemos para ti la promo <span>Habemus Mojitus</span>, ofreciendote cualquiera de nuestros mojitos por solo <span>¡$60 pesotes!</span> de 4 a 7 de la tarde. Queremos que pases un fin de semana relax.</p>
+      <p>Valida todo el año de Viernes a Domingo.</p>
+      <a href="https://wa.me/525616379523?text=Quisiera pedir una Promo Habemus Mojitus :P" class="btn">¡Pidelos Ahora!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-4.png" alt="imagen de dos mojitos">
