--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Encabezado para la selección de opciones -->
 <header>
 
-  <a href="#" class="logo"><i class="fas fa-crown" style="letter-spacing: normal"> La Cuba Chiquita</i></a>
+  <a href="https://www.facebook.com/la.cuba.chiquita" class="logo"><i class="fas fa-crown" style="letter-spacing: 0.3rem"> La Cuba Chiquita</i></a>
   
   <!-- Definir la barra de Navegación -->
   <div id="menu-bar" class="fas fa-bars"></div>
