--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="content">
         <img src="images/s-1.png" alt="limón">
         <h3>Mojito Tradicional</h3>
-        <p>Cóctel tradicional que se combina la fuerza del ron blanco, con la acidez del jugo de limón natural y el fresco sabor de la hierbabuena. ¡Ideal combinación para ver tu serie favorita en el Netflix!</p>
+        <p>Cóctel tradicional que se combina la fuerza del ron blanco, con la acidez del jugo de limón natural y el fresco sabor de la hierbabuena. ¡Ideal combinación para ver tu serie favorita en Netflix!</p>
       </div>
     </div>
     
@@ -142,7 +142,7 @@
   <div class="container">
     <div class="content">
       <h3>¡Promoción de San Valentín!</h3>
-      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con con la persona que más amas o con tus amigos.</p>
+      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con la persona que más amas o con tus amigos.</p>
       <p>Valida Viernes y Sábado del 11 al 20 de febrero de 2022.</p>
       <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Pidelos Ahora!</a>
     </div>
