--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>¿Fin de semana? Relájate! y no te preocupes por la comida y los tragos coquetos. En la Cuba Chiquita ofrecemos los <span>mejores pambazos y mojitos del rumbo</span>. Garantizado que la pasarás de lo mejor.</p>
     <p>Por el momento no contamos con un local fijo, pero ordena lo que más se te antoje y te lo <span>entregamos en tiempo record en el Domo de la UEZ</span>. Y si te queda lejos, acordamos un punto medio <span>(:</span></p>
 
-    <a href="https://wa.me/525586160282?text=Quisiera pedir algo rico para este fin :3" class="btn">¡Pídelos Ahora!</a>
+    <a href="https://wa.me/525586160282?text=Quisiera pedir algo rico para este fin :3" class="btn">¡Da clic para ordenar!</a>
   </div>
   <div class="image">
     <img src="images/home-img.png" alt="imagen de un mojito tradicional">
@@ -86,6 +86,46 @@
         <img src="images/s-5.png" alt="pambazo de papa con chorizo">
         <h3>Pambazo de Tinga de Pollo</h3>
         <p>Una sabrosa combinación: tinga de pollo con el clásico pan de pambazo. Si creías que las tortas de taco de canasta estaban en otro nivel, con el pambazo de tinga te vas pa'trás. Un sabor exquisito para acompañar tu noche de fin de semana.</p>
+      </div>
+    </div>
+
+    <div class="box">
+      <span class="price">$ 40 x Pz</span>
+      <img class="image" src="images/s-img-9.png" alt="pambazo de papa con chorizo">
+      <div class="content">
+        <img src="images/s-9.png" alt="pambazo de papa con chorizo">
+        <h3>Gringa Doble</h3>
+        <p>Una gringa con doble tortilla de harina, con una buena porción de carne al pastor y queso oaxaca. Una de nuestras especialidades más ricas, por la combinación de sabores. Pídela doradita o suave, o con el pastor doradito. Te apostamos a que vas a querer otra.</p>
+      </div>
+    </div>
+
+    <div class="box">
+      <span class="price">$ 60 x Pz</span>
+      <img class="image" src="images/s-img-7.png" alt="pambazo de papa con chorizo">
+      <div class="content">
+        <img src="images/s-7.png" alt="pambazo de papa con chorizo">
+        <h3>Burrito</h3>
+        <p>Con carne al pastor, costilla o bistec de res, tienes esas tres opciones de sabor para elegir, en combinación con queso oaxaca y frijoles refritos. Te preparamos un burrito de 29 cm., acompañado de unas ricas papas a la francesa.</p>
+      </div>
+    </div>
+
+    <div class="box">
+      <span class="price">$ 60 x Pz</span>
+      <img class="image" src="images/s-img-8.png" alt="pambazo de papa con chorizo">
+      <div class="content">
+        <img src="images/s-8.png" alt="pambazo de papa con chorizo">
+        <h3>Huarache de Costilla</h3>
+        <p>Pide un delicioso huarache con costilla. Relleno de frijoles refritos y con una rica salsa verde o roja (de la que no pica), queso rallado y con la mejor costilla de res que puedas probar, este huarache de 32 cm. matará el hambre que tengas este fin de semana.</p>
+      </div>
+    </div>
+
+    <div class="box">
+      <span class="price">$ 25 x Pz</span>
+      <img class="image" src="images/s-img-8.png" alt="pambazo de papa con chorizo">
+      <div class="content">
+        <img src="images/s-8.png" alt="pambazo de papa con chorizo">
+        <h3>Huarache Sencillo</h3>
+        <p>Acompaña tus noches de fin de semana con un rico huarache relleno de frijolitos refritos, salsa verde o roja (de la que no pica) y queso rallado. Perfecto para acompañarte en tu noche de fiesta y que no pases hambre mientras te diviertes.</p>
       </div>
     </div>
     
@@ -144,7 +184,7 @@
       <h3>¡Promoción de San Valentín!</h3>
       <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con la persona que más amas o con tus amigos.</p>
       <p>Valida Viernes y Sábado del 11 al 20 de febrero de 2022.</p>
-      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-2.png" alt="imagen de dos pambazos preparados y dos mojitos">
@@ -156,7 +196,7 @@
       <h3>¡Promoción Fiesta en Grande!</h3>
       <p>Nos gusta que te diviertas con tus amigos, y justo por eso con la promo <span>Fiesta en Grande</span>, te ofrecemos 3 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$270 pesotes!</span>. Para que disfrutes con tus vales de una buena comida y ricas bebidas.</p>
       <p>Valida todo el año Viernes y Sábado.</p>
-      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Fiesta en Grande!!!" class="btn">¡Ordena Ahora!</a>
+      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Fiesta en Grande!!!" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-1.png" alt="imagen de dos pambazos preparados y 4 mojitos">
@@ -168,7 +208,7 @@
       <h3>¡Promoción de Mary!</h3>
       <p>Nos gusta poder llevarte los mejores sabores de Jalisco. Con la promo <span>Mary</span> te compartimos 3 pambazos tradicionales a tan solo <span>¡$80 pesotes!</span>. Queremos que los sabores de Jalisco estén en tu mesa.</p>
       <p>Valida todo el año Viernes y Sábado.</p>
-      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo de Mary :3" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo de Mary :3" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-3.png" alt="imagen de dos pambazos preparados">
@@ -180,7 +220,7 @@
       <h3>¡Promoción Habemus Mojitus!</h3>
       <p>Sabemos que no hay nada como un delicioso mojito después de una semana de trabajo pesado, por eso tenemos para ti la promo <span>Habemus Mojitus</span>, ofreciendote cualquiera de nuestros mojitos por solo <span>¡$60 pesotes!</span> de 4 a 7 de la tarde. Queremos que pases un fin de semana relax.</p>
       <p>Valida todo el año de Viernes a Domingo.</p>
-      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Habemus Mojitus :P" class="btn">¡Pidelos Ahora!</a>
+      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Habemus Mojitus :P" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-4.png" alt="imagen de dos mojitos">
