--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
   
   <div class="container">
     <div class="content">
-      <h3>¡Promoción de San Valentín!</h3>
+      <h3>¡Promoción de Enamorados!</h3>
       <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con la persona que más amas o con tus amigos.</p>
-      <p>Valida Viernes y Sábado del 11 al 20 de febrero de 2022.</p>
-      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo San Valentín!!!" class="btn">¡Clic aquí para Ordenar!</a>
+      <p>Valida todo el año Viernes y Sábado.</p>
+      <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Enamorados!!!" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
     <div class="image">
       <img src="images/prom-img-2.png" alt="imagen de dos pambazos preparados y dos mojitos">
