--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <div class="container">
     <div class="content">
       <h3>¡Promoción de Enamorados!</h3>
-      <p>Estámos de fiesta contigo, en el día del amor y la amistad. Por eso te ofrecemos la promo <span>San Valentín</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con la persona que más amas o con tus amigos.</p>
+      <p>Nos gusta verte feliz con tu enamorada/enamorado. Por eso te ofrecemos la promo <span>Enamorados</span>, que te ofrece 2 mojitos del sabor de tu preferencia, más tres pambazos tradicionales por tan solo <span>¡$200 pesotes!</span>. Para que compartas con la persona que más amas o con tus amigos.</p>
       <p>Valida todo el año Viernes y Sábado.</p>
       <a href="https://wa.me/525586160282?text=Quisiera pedir una Promo Enamorados!!!" class="btn">¡Clic aquí para Ordenar!</a>
     </div>
